[tool.poetry]
name = "dokusan"
version = "0.1.0-alpha.4"
description = "Sudoku generator and solver with a step-by-step guidance"
keywords = ["sudoku", "sudoku-solver", "sudoku-generator", "solver", "generator"]
readme = "README.rst"
authors = ["Aleksei Maslakov <lesha.maslakov@gmail.com>"]
license = "GPL-3.0"
packages = [
    { include = "dokusan", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
tox = "^3.14"
pre-commit = "^1.20"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
